# supply-manage

./: .gitignore  Dockerfile  alembic.ini  docker-compose.yaml  docker.env  example.docker.env  example.env  pyproject.toml
app/: config.py  database.py  main.py  schemas.py
app/alembic/: env.py
app/alembic/versions/: 6abefef5c1d7_add_product_models.py  a054d3f01943_update_user_model.py  cc36188842ae_add_suppliers_and_supplier_products_.py  d18a954a990d_initial_revision.py  d41db5bffc9c_add_orders_and_order_products_models.py  dcf71b924895_add_cost_field_to_order_model.py
app/auth/: api.py  dao.py  dependencies.py  models.py  schemas.py  service.py
app/dao/: base.py
app/kafka/: consumers.py  producers.py  schemas.py  topics.py
app/orders/: api.py  dao.py  models.py  schemas.py  services.py
app/products/: api.py  dao.py  models.py  schemas.py  service.py
app/suppliers/: api.py  dao.py  models.py  schemas.py  service.py
app/utils/: jwt.py
